<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="e_mail">E-mail</string>
    <string name="digital_house_foods">Digital House Foods</string>
    <string name="senha">Senha</string>
    <string name="log_in">LOG IN</string>
    <string name="or">OU</string>
    <string name="registre_se1">REGISTRE-SE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome</string>
    <string name="repetir_senha">Repita a Senha</string>
    <string name="registre_se2">Registre-se</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pratos_principais">Pratos principais</string>
    <string name="texto_louco">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_dish">DishActivity</string>
</resources>