<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/action_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/digital_house_foods"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/e_mail"
        android:padding="20dp"
        app:boxStrokeColor="@android:color/transparent"
        app:hintTextColor="?attr/colorOnSurface">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/e_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundTint="@android:color/transparent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/action_bar"
            android:textCursorDrawable="@drawable/cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:padding="20dp"
        app:boxStrokeColor="@android:color/transparent"
        app:hintTextColor="?attr/colorOnSurface">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/action_bar"
            android:textCursorDrawable="@drawable/cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/log_in_button"
        android:text="@string/log_in" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or" />

    <Button
        android:id="@+id/register_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/register_button"
        android:text="@string/registre_se1" />

</LinearLayout>